[gd_scene load_steps=15 format=3 uid="uid://dpo5larln60f0"]

[ext_resource type="Texture2D" uid="uid://blyosnq76aer2" path="res://Assets/WeaponAtlas.png" id="1_85rrd"]
[ext_resource type="Shader" path="res://Assets/Shaders/highlight.gdshader" id="2_jcxpu"]
[ext_resource type="Script" path="res://Game/UI/weapon_button.gd" id="2_xc7dh"]
[ext_resource type="Shader" path="res://Assets/Shaders/progress.gdshader" id="4_bwbhp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pdloa"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.745098, 0.745098, 0.745098, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_odshk"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.94902, 0.713726, 0.239216, 1)
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fw0va"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.247059)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3lqut"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0, 0, 0, 0.784314)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rgbnq"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
bg_color = Color(0, 0, 0, 0.498039)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="AtlasTexture" id="AtlasTexture_1v8ue"]
resource_local_to_scene = true
atlas = ExtResource("1_85rrd")
region = Rect2(32, 0, 32, 32)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ncb11"]
shader = ExtResource("2_jcxpu")
shader_parameter/Line_Smoothness = 0.045
shader_parameter/Line_Width = 0.09
shader_parameter/Brightness = 3.0
shader_parameter/Rotation_deg = 30.0
shader_parameter/Distortion = 1.8
shader_parameter/Speed = 0.7
shader_parameter/Position = 0.0
shader_parameter/Position_Min = 0.25
shader_parameter/Position_Max = 0.5
shader_parameter/Alpha = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_crxxi"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kbojo"]
resource_local_to_scene = true
shader = ExtResource("4_bwbhp")
shader_parameter/overlay_color = Color(0.890196, 0.258824, 0.384314, 1)
shader_parameter/progress = 0.0
shader_parameter/strength = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxq8a"]
bg_color = Color(0.890196, 0.258824, 0.384314, 0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="WeaponButton" type="Button"]
custom_minimum_size = Vector2(25, 25)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_pdloa")
theme_override_styles/disabled = SubResource("StyleBoxFlat_odshk")
theme_override_styles/hover = SubResource("StyleBoxFlat_fw0va")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3lqut")
theme_override_styles/normal = SubResource("StyleBoxFlat_rgbnq")
icon = SubResource("AtlasTexture_1v8ue")
icon_alignment = 1
expand_icon = true
script = ExtResource("2_xc7dh")

[node name="highlight" type="Panel" parent="."]
visible = false
material = SubResource("ShaderMaterial_ncb11")
layout_mode = 1
offset_right = 25.0
offset_bottom = 25.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_crxxi")

[node name="delete" type="Panel" parent="."]
material = SubResource("ShaderMaterial_kbojo")
custom_minimum_size = Vector2(25, 25)
layout_mode = 0
offset_right = 25.0
offset_bottom = 25.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fxq8a")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
